--- a/extras/tmux/tmux.conf
+++ b/extras/tmux/tmux.conf
@@ -17,16 +17,6 @@ bind - split-window -v -c "#{pane_current_path}"
 bind r source-file ~/.config/tmux/.tmux.conf
 set -g mouse "on"
 
-# 957fb8  color24 
-# 76946a  color48
-# 2d4f67  color21
-# 2a2a37  color20
-# 78a9ff  color19
-# 0c0c0c  color18
-# 2d4f67  color29
-# 223249  color51 
-# dcd7ba  color17
-
 # [16] = color("fujiWhite"), --     #dcd7ba
 # [17] = color("oldWhite"), --      #C8C093
 # [18] = color("inkBlack"), --      #090618
@@ -82,9 +72,9 @@ set -g status-right-style NONE
 # Bottom Left Bar
 set -g status-left "#[fg=color16,bg=color24,bold] #S "
 setw -g window-status-current-format "#[fg=color24,bg=color48] #[fg=color19,bg=color48] #I #[fg=color48,bg=color21]  #[fg=color38,bg=color21]#W #(~/.config/tmux/scripts/truncate_path.sh #{pane_current_path} 16)#F#[fg=color21,bg=color20]"
-
+# Bottom Right Bar
 set -g status-right "#[fg=color21,bg=color20]#[fg=color38,bg=color21] %Y-%m-%d #[fg=color48,bg=color21] #[fg=color21,bg=color48] %I:%M %p #[fg=color24,bg=color48] #[fg=color16,bg=color24] #h "
 setw -g window-status-activity-style "underscore,fg=#7b7c7e,bg=color20"
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#7b7c7e,bg=color20"
-setw -g window-status-format "#[fg=color20,bg=color20,nobold,nounderscore,noitalics] #[default] #I  #W #(~/.config/tmux/scripts/truncate_path.sh #{pane_current_path} 16) #F"
+setw -g window-status-format "#[fg=color24,bg=color48] #[fg=color19,bg=color48] #I #[fg=color48,bg=color21]  #[fg=color38,bg=color21]#W #(~/.config/tmux/scripts/truncate_path.sh #{pane_current_path} 16)#F#[fg=color21,bg=color20]"
