full env install

--- a/extras/tmux/tmux.conf
+++ b/extras/tmux/tmux.conf
@@ -1,21 +1,27 @@
-# Bindings
-# Prefix
-set-option -sa terminal-overrides ",xterm*:Tc"
+# Key Bindings
+#   PREFIX                  [CTRL-a]
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-# Window Splits
-unbind '"'
+#   Split Window Horizontal [PREFIX |]
 unbind %
-unbind h
-unbind j
-unbind k
-unbind l
 bind | split-window -h -c "#{pane_current_path}"
+#   Split Window Vertial    [PREFIX -]
+unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
-# Easy reloads
-bind r source-file ~/.config/tmux/.tmux.conf
-set -g mouse "on"
+#   Resize Pane Down        [PREFIX j]
+bind -r j resize-pane -D 1
+#   Resize Pane Up          [PREFIX k]
+bind -r k resize-pane -U 1
+#   Resize Pane Right       [PREFIX l]
+bind -r l resize-pane -R 1
+#   Resize Pane Left        [PREFIX h]
+bind -r h resize-pane -L 1
+#   Maximize Pane
+bind -r m resize-pane -Z
+#   Reload Session          [PREFIX r]
+bind r source-file ~/.config/tmux/tmux.conf
+
 
 # [16] = color("fujiWhite"), --     #dcd7ba
 # [17] = color("oldWhite"), --      #C8C093
@@ -51,7 +57,7 @@ set -g mouse "on"
 # [47] = color("boatYellow2"), --   #C0A36E
 # [48] = color("carpYellow"), --    #C0A36E
 # [49] = color("sakuraPink"), --    #D27E99
-# [50] = color("waveRed"), --       #E46876j
+# [50] = color("waveRed"), --       #E46876
 # [51] = color("peachRed"), --      #FF5D62
 # [52] = color("surimiOrange"), --  #FFA066
 # [53] = color("katanaGray"), --    #717C7C
@@ -78,3 +84,11 @@ setw -g window-status-activity-style "underscore,fg=#7b7c7e,bg=color20"
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#7b7c7e,bg=color20"
 setw -g window-status-format "#[fg=color24,bg=color48] #[fg=color19,bg=color48] #I #[fg=color48,bg=color21]  #[fg=color38,bg=color21]#W #(~/.config/tmux/scripts/truncate_path.sh #{pane_current_path} 16)#F#[fg=color21,bg=color20]"
+
+# SET GLOBAL CONFIG AND PLUGINS
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -g mouse "on"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+run '~/.config/tmux/plugins/tpm/tpm'
+
